# flask-student-manager

./: .gitignore  app.py  config.py  database.yml  pyproject.toml
apis/: __init__.py  student.py
extensions/: commands.py
models/: student.py
tests/: conftest.py
tests/integration/apis/: test_student_api.py
